# chameleon-ps-rdma

./: .gitignore
benchmark/: Benchmark_visualizations.ipynb  benchmark.py  endpoints.json  requirements.txt  runbench.sh
configuration/: globus_setup.sh  mochi-env.sh  setup.sh
proxy-client/: add_libs.sh  margo.py  rdma.py  rdma_example.py  rdma_interface.py  rdma_transfer.c  redis_example.py  setup.py  types.h
proxy-client/examples/: examples.py  rdma_example.py  redis_example.py
proxy-server/: CMakeLists.txt  proxy-server.py  server.c  types.h  update_hiredispc.sh
